--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "express": "4.10.2",
     "express-session": "1.9.1",
     "fetch-ie8": "^1.4.3",
-    "markdown": "0.5.0",
+    "markdown": "^0.5.0",
     "mongodb": "2.0.33",
     "morgan": "1.3.1",
     "multer": "^1.2.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.3.2",
+    "react-css-modules": "^4.1.0",
+    "react-dom": "^15.4.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "redux": "^3.5.2",
@@ -92,7 +93,6 @@
     "webpack": "^1.9.11",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
-
     "babel-cli": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
